--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     font-family: 'Quicksand', sans-serif;
 }
 
-<<<<<<< HEAD
+/*<<<<<<< HEAD*/
 section {
     padding-top: 5rem;
 }
@@ -92,7 +92,7 @@ ul li a .fa-angle-down {
         padding: 15px;
     }
 }
-=======
+/*=======*/
 body{
 	font-family: 'Quicksand', sans-serif;
  }
