--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
  section{
 	padding-top: 5rem;
  }
+
  .jumbotron{
      padding-top: 2rem ;
      padding-left: 16rem;
@@ -33,11 +34,11 @@ body {
      padding-left: 2rem;
  }
 
-
  ul{
 	 padding: 0;
 	 margin-left: -70px;
  }
+
  ul li{
 	 list-style: none;
 	 border-bottom: 1px solid rgba(255, 255, 255, 0.5);
@@ -49,28 +50,73 @@ body {
 	 padding: 19px 0px 18px 25px;
 	 transition: all 200ms ease-in;
  }
+
  ul li a:hover{
 	 text-decoration: none;
 	 color: #1abc9c;
  }
+
  ul li a:visited{
 	 text-decoration: none;
 	 color: #fff;
  }
+
  li li a span{
 	 display: inline-block;
  }
+
  ul ul{
 	 display: none;
 	 margin:0px;
  }
+
  ul li a .fa-angle-down{
 	 margin-right: 10px;
  }
 
- .container{
-	 margin-left: 20%;
- }
+.sub-li{
+    margin-top: -50px;
+    margin-bottom: -10px;
+    padding : 10px ;
+    border-bottom: 0px;
+}
+
+li {
+    display: block;
+    transition-duration: 0.5s;
+}
+
+li:hover {
+    cursor: pointer;
+}
+
+ul li ul {
+    visibility: hidden;
+    opacity: 0;
+    position: absolute;
+    transition: all 0.5s ease;
+    margin-top: 0.5rem;
+    left: 30px;
+    display: none;
+}
+
+ul li:hover > ul,
+ul li ul:hover {
+    visibility: visible;
+    opacity: 1;
+    display: block;
+    padding-top : 10px;
+}
+
+ul li ul li {
+    clear: both;
+    width: 100%;
+}
+
+#clickableAwesomeFont {
+    cursor: pointer
+}
+
 
  /*apabila lebar min 768px*/
  @media(min-width: 768px) {
