--- a/style.css
+++ b/style.css
@@ -2,82 +2,85 @@ body {
     font-family: 'Quicksand', sans-serif;
 }
 
- section{
-	padding-top: 5rem;
- }
+section {
+    padding-top: 5rem;
+}
 
- .jumbotron{
-     padding-top: 2rem ;
-     padding-left: 16rem;
-     padding-right: 3rem;
-     padding-bottom: 4rem;
- }
+.jumbotron {
+    padding-top: 2rem;
+    padding-left: 16rem;
+    padding-right: 3rem;
+    padding-bottom: 4rem;
+}
 
- .menu{
-     padding-left: 20rem;
- }
- .wrapper{
-	 width: 100%;
-	 height: 100%;
- }
- .navbar{
-	 margin-bottom: 0;
- }
+.menu {
+    padding-left: 20rem;
+}
 
- .sidebar {
-     width: 100%;
-     height: 100%;
-     background: 	#293949;
-     position: fixed;
-     z-index: 99;
-     padding-top: 2px;
-     padding-left: 2rem;
- }
+.wrapper {
+    width: 100%;
+    height: 100%;
+}
 
- ul{
-	 padding: 0;
-	 margin-left: -70px;
- }
+.navbar {
+    margin-bottom: 0;
+}
 
- ul li{
-	 list-style: none;
-	 border-bottom: 1px solid rgba(255, 255, 255, 0.5);
- }
- ul li a{
-	 text-decoration: none;
-	 color: 	#F0F8FF;
-	 display: block;
-	 padding: 19px 0px 18px 25px;
-	 transition: all 200ms ease-in;
- }
+.sidebar {
+    width: 100%;
+    height: 100%;
+    background: #293949;
+    position: fixed;
+    z-index: 99;
+    padding-top: 2px;
+    padding-left: 2rem;
+}
 
- ul li a:hover{
-	 text-decoration: none;
-	 color: #1abc9c;
- }
+ul {
+    padding: 0;
+    margin-left: -70px;
+}
 
- ul li a:visited{
-	 text-decoration: none;
-	 color: #fff;
- }
+ul li {
+    list-style: none;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+}
 
- li li a span{
-	 display: inline-block;
- }
+ul li a {
+    text-decoration: none;
+    color: #F0F8FF;
+    display: block;
+    padding: 19px 0px 18px 25px;
+    transition: all 200ms ease-in;
+}
 
- ul ul{
-	 display: none;
-	 margin:0px;
- }
+ul li a:hover {
+    text-decoration: none;
+    color: #1abc9c;
+}
 
- ul li a .fa-angle-down{
-	 margin-right: 10px;
- }
+ul li a:visited {
+    text-decoration: none;
+    color: #fff;
+}
 
-.sub-li{
+li li a span {
+    display: inline-block;
+}
+
+ul ul {
+    display: none;
+    margin: 0px;
+}
+
+ul li a .fa-angle-down {
+    margin-right: 10px;
+}
+
+.sub-li {
     margin-top: -50px;
     margin-bottom: -10px;
-    padding : 10px ;
+    padding: 10px;
     border-bottom: 0px;
 }
 
@@ -105,7 +108,7 @@ ul li ul:hover {
     visibility: visible;
     opacity: 1;
     display: block;
-    padding-top : 10px;
+    padding-top: 10px;
 }
 
 ul li ul li {
@@ -117,16 +120,41 @@ ul li ul li {
     cursor: pointer
 }
 
+.pic-empty-states {
+    margin-top: 100px;
+    display: flex;
+    justify-content: center;
+}
 
- /*apabila lebar min 768px*/
- @media(min-width: 768px) {
-	 .sidebar{
-		 width: 240px;
-	 }
-	 .content{
-		 margin-left: 250px;
-	 }
-	 .inner{
-		 padding: 15px;
-	 }
- }
+.empty-pic {
+    height: auto;
+    width: 100px;
+}
+
+.title-empty {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.desc-empty {
+    display: flex;
+    justify-content: center;
+    color: gray;
+}
+
+
+/*apabila lebar min 768px*/
+@media (min-width: 768px) {
+    .sidebar {
+        width: 240px;
+    }
+
+    .content {
+        margin-left: 250px;
+    }
+
+    .inner {
+        padding: 15px;
+    }
+}
